[main@c006d9a] Update AL-Go System Files from spetersenms/AL-Go@aldocCommasInNames - 0c95291

--- a/.github/workflows/CICD.yaml
+++ b/.github/workflows/CICD.yaml
@@ -317,7 +317,7 @@ jobs:
 
   Deploy:
     needs: [ Initialization, Build1, Build ]
-    if: (!cancelled()) && (needs.Build1.result == 'success' || needs.Build1.result == 'skipped') && (needs.Build.result == 'success' || needs.Build.result == 'skipped') && fromJson(needs.Initialization.outputs.deploymentEnvironmentsJson).environmentCount > 0
+    if: (!cancelled()) && (needs.Build1.result == 'success' || needs.Build1.result == 'skipped') && (needs.Build.result == 'success' || needs.Build.result == 'skipped') && needs.Initialization.outputs.environmentCount > 0
     strategy: ${{ fromJson(needs.Initialization.outputs.environmentsMatrixJson) }}
     runs-on: ${{ fromJson(matrix.os) }}
     name: Deploy to ${{ matrix.environment }}
