--- a/.github/AL-Go-Settings.json
+++ b/.github/AL-Go-Settings.json
@@ -15,5 +15,7 @@
   "useProjectDependencies": true,
   "buildModes": [
     "Clean"
-  ]
+  ],
+  "runs-on": "self-hosted",
+  "githubRunner": "self-hosted"
 }
