[main@c3c2a40] Update AL-Go System Files from spetersenms/AL-Go@aldocCommasInNames - 0c95291

--- a/.github/workflows/AddExistingAppOrTestApp.yaml
+++ b/.github/workflows/AddExistingAppOrTestApp.yaml
@@ -38,7 +38,7 @@ env:
 jobs:
   AddExistingAppOrTestApp:
     needs: [ ]
-    runs-on: [ windows-latest ]
+    runs-on: [ self-hosted ]
     steps:
       - name: Dump Workflow Information
         uses: spetersenms/AL-Go/Actions/DumpWorkflowInfo@aldocCommasInNames
